<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">
    <LinearLayout
        android:id="@+id/activity_add_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_16sdp"
        android:paddingRight="@dimen/_16sdp"
        tools:context="com.example.andriod.orydna.Activity.AddTaskActivity">

        <EditText
            android:hint="@string/add_name_of_task_to_do"
            android:id="@+id/add_task_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:inputType="text"
            android:background="@drawable/border"
            android:maxLines="1"
            android:layout_marginRight="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:textColor="@color/colorBlack"
            android:padding="@dimen/_12sdp"/>

        <EditText
            android:id="@+id/add_task_punishment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/border"
            android:hint="@string/add_task_punishment"
            android:inputType="text"
            android:maxLines="1"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_12sdp" />

        <EditText
            android:hint="@string/add_task_description"
            android:id="@+id/add_task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="top|left"
            android:padding="@dimen/_8sdp"
            android:background="@drawable/border"
            android:lines="6"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/add_task_ending"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:textSize="@dimen/_12sdp"
                android:inputType="text"
                android:hint="@string/due_date"
                android:background="@drawable/border"
                android:maxLines="1"
                android:textColor="@color/colorBlack"
                android:padding="@dimen/_12sdp"/>
            <ImageView
                android:id="@+id/add_task_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/addcalendar"
                android:layout_gravity="center_vertical"
                android:paddingLeft="@dimen/_20sdp"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/delete_task_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/cross"
                android:layout_gravity="center"
                android:layout_weight="1"/>
        </LinearLayout>
               <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/add_task_ending_time"
                android:layout_width="0dp"
                android:hint="@string/due_time"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:textSize="@dimen/_12sdp"
                android:inputType="text"
                android:background="@drawable/border"
                android:maxLines="1"
                android:textColor="@color/colorBlack"
                android:padding="@dimen/_12sdp"/>
            <ImageView
                android:id="@+id/add_task_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/timer"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/_1sdp"
                android:paddingLeft="@dimen/_20sdp"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/delete_task_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/cross"
                android:layout_gravity="center"
                android:layout_weight="1"/>
        </LinearLayout>
        <EditText
            android:hint="@string/add_task_reward"
            android:id="@+id/add_task_reward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:inputType="text"
            android:background="@drawable/border"
            android:maxLines="1"
            android:layout_marginRight="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:textColor="@color/colorBlack"
            android:padding="@dimen/_12sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:text="@string/set_alarm"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_16sdp"/>
        <CheckBox
            android:id="@+id/set_task_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/reminder"
            android:layout_marginBottom="@dimen/_16sdp"/>
    </LinearLayout>
</ScrollView>