<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_view_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_4sdp">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        card_view:cardCornerRadius="@dimen/_3sdp"
        card_view:cardElevation="@dimen/_2sdp"
        card_view:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_16sdp"
                android:background="@color/colorPrimaryDark"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/view_task_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/learn_android"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_16sdp" />
            </LinearLayout>

            <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/view_task_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlack"
                        android:layout_gravity="center_vertical"
                        android:padding="@dimen/_16sdp"
                        android:text="@string/test"
                        android:lineSpacingMultiplier="1.2"
                        android:textSize="@dimen/_13sdp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="9"
                            android:padding="@dimen/_8sdp"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/task_reward"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/add_task_reward"
                                android:textColor="@color/colorGreen"
                                android:textSize="@dimen/_15sdp" />
                            <TextView
                                android:id="@+id/view_task_reward"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="@string/task_date"
                                android:textColor="@color/colorBorder"
                                android:layout_marginTop="@dimen/_8sdp"
                                android:textSize="@dimen/_14sdp" />
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="9"
                            android:padding="@dimen/_8sdp"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/task_punishment"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/add_task_punishment"
                                android:textColor="@color/colorDull"
                                android:textSize="@dimen/_15sdp" />
                            <TextView
                                android:id="@+id/view_task_punishment"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="@string/task_date"
                                android:textColor="@color/colorBorder"
                                android:layout_marginTop="@dimen/_8sdp"
                                android:textSize="@dimen/_14sdp" />
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="9"
                            android:orientation="vertical"
                            android:padding="@dimen/_8sdp">

                            <TextView
                                android:id="@+id/task_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/task_due_date"
                                android:textColor="@color/colorBlack"
                                android:textSize="@dimen/_15sdp" />

                            <TextView
                                android:id="@+id/view_task_due_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_8sdp"
                                android:text="@string/task_date"
                                android:textColor="@color/colorBorder"
                                android:textSize="@dimen/_14sdp" />
                        </LinearLayout>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:layout_marginBottom="@dimen/_12sdp"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/alarm_state"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/reminder_alarm_is_off"
                            android:layout_gravity="center"
                            android:textColor="@color/colorDull"
                            android:textSize="@dimen/_14sdp" />
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/alarm"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:layout_marginBottom="@dimen/_8sdp"
                            android:layout_gravity="center"/>
                    </LinearLayout>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>